<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/dead_pool_poster"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/gradient_movie_poster"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
            app:layout_constraintStart_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_playTrailer"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="16dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/baseline_play_arrow_24"
            app:iconGravity="textEnd"
            app:iconSize="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_watchTrailer"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
            app:layout_constraintStart_toStartOf="@+id/iv_poster" />

        <TextView
            android:id="@+id/tv_watchTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lbl_watch_trailer"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
            app:layout_constraintEnd_toEndOf="@+id/btn_playTrailer"
            app:layout_constraintStart_toStartOf="@+id/btn_playTrailer" />

        <View
            android:id="@+id/view_line"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_primary"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

        <TextView
            android:id="@+id/tv_movieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lbl_dead_pool"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line" />

        <TextView
            android:id="@+id/tv_releaseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:text="2016"
            android:textColor="@color/secondary_textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />

        <TextView
            android:id="@+id/tv_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="●"
            android:textColor="@color/secondary_textColor"
            app:layout_constraintEnd_toStartOf="@+id/tv_genres"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_releaseYear"
            app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Action, Fantastic"
            android:textAlignment="center"
            android:textColor="@color/secondary_textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_circle2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_circle"
            app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />

        <TextView
            android:id="@+id/tv_circle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="●"
            android:textColor="@color/secondary_textColor"
            app:layout_constraintEnd_toStartOf="@+id/tv_duration_hour"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_genres"
            app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />

        <TextView
            android:id="@+id/tv_duration_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="1h"
            android:textColor="@color/secondary_textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_duration_mins"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_circle2"
            app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />

        <TextView
            android:id="@+id/tv_duration_mins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="48dp"
            android:text="49m"
            android:textColor="@color/secondary_textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_duration_hour"
            app:layout_constraintTop_toTopOf="@+id/tv_duration_hour" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="5"
            android:scaleX="1.8"
            android:scaleY="1.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

        <TextView
            android:id="@+id/tv_storyLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_story_line"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textColor="@color/secondary_textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_storyLine"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyLine" />

        <TextView
            android:id="@+id/tv_lbl_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_cast"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_cast"
            tools:listitem="@layout/item_view_cast" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>